# Hatena-Intern-2025-Public

./: README.md  skaffold.yaml
.devcontainer/: devcontainer.json  install-neovim.sh  post-attach.sh  post-start.sh
.github/workflows/: account.yml  blog.yml  renderer-go.yml  renderer-rust.yml  renderer-ts.yml  update-pb.yml
docs/: exercise.md
k8s/: kustomization.yaml  namespace.yaml
k8s/account/: app.yaml  db.yaml  kustomization.yaml  test.yaml
k8s/blog/: app.yaml  db.yaml  kustomization.yaml  test.yaml
k8s/renderer-go/: app.yaml
k8s/renderer-rust/: app.yaml  kustomization.yaml
k8s/system/: sa.yaml
pb/: account.proto  renderer.proto
pb/go/renderer/: renderer.pb.go
pb/protoc-go/: Dockerfile  go.mod  go.sum
pb/protoc-ts/: Dockerfile
pb/scripts/: compile
pb/ts/account/: account_grpc_pb.js  account_pb.js
pb/ts/health-check/: health-check_grpc_pb.js  health-check_pb.js
pb/ts/renderer/: renderer_grpc_pb.js
services/account/: .golangci.yml  Dockerfile  Dockerfile.test  go.mod  go.sum  main.go
services/account/app/: user.go
services/account/domain/: user.go
services/blog/: .gitignore  .golangci.yml  Dockerfile  Dockerfile.test  go.mod  go.sum  main.go  package.json  tsconfig.json  vite.config.js  vite.config.ts
services/renderer-go/: Dockerfile  go.mod  go.sum  main.go
services/renderer-rust/: Cargo.toml  Dockerfile  build.rs
services/renderer-rust/src/: common_mark.rs  config.rs  lib.rs  main.rs
services/renderer-ts/: Dockerfile  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.mts
(+63 files in other folders)
