[package]
name = "renderer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.27"
envy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
pulldown-cmark = "0.13.0"
ammonia = "4.1.1"
tonic-health = "0.14.1"

[build-dependencies]
tonic-prost-build = "*"
